# AdventOfCode2025

./: .gitignore
day_1/: CMakeLists.txt  Dial.hpp  README.MD  main_oo.cpp  main_proc.cpp
day_2/: CMakeLists.txt  NumberComperator.cpp  NumberComperator.hpp  README.MD  main.cpp
day_3/: CMakeLists.txt  README.MD  main.cpp
day_4/: Board.cpp  Board.hpp  CMakeLists.txt  Cell.cpp  Cell.hpp  Position.h  README.MD  main.cpp
day_5/: CMakeLists.txt  README.MD  main.cpp
day_6/: CMakeLists.txt  README.MD  main.cpp
day_7/: Board.cpp  Board.hpp  CMakeLists.txt  Cell.cpp  Cell.hpp  CellType.hpp  Position.h  README.MD  main.cpp
